[Fix] -> Comment 3em spacing added to the tablet devices.

--- a/assets/css/unminified/skin-1.css
+++ b/assets/css/unminified/skin-1.css
@@ -292,13 +292,13 @@
 
 @media (max-width: 1200px) {
   .comments-area {
-    padding: 3.34em 2.4em;
+    padding: 3em;
   }
 }
 
 @media (max-width: 768px) {
   .comments-area {
-    padding: 1.5em 2.14em;
+    padding: 3em;
   }
 }
 
