--- a/sass/site/blog/single-post-layouts/_comment-form-skin-1.scss
+++ b/sass/site/blog/single-post-layouts/_comment-form-skin-1.scss
@@ -173,10 +173,10 @@
     margin-top: 1.35em;
     padding: 3em;
     @media(max-width: $mx-col-xl) {
-        padding: 3.34em 2.4em;
+        padding: 3em;
     }
     @media(max-width: $mx-col-md) {
-        padding: 1.5em 2.14em;
+        padding: 3em;
     }
     @media(max-width: $mx-col-sm) {
         padding: 2em;
